--- a/ml_models.ipynb
+++ b/ml_models.ipynb
@@ -11,14 +11,12 @@
     "import sklearn\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "\n",
-    "#USE SKIKIT LEARN"
+    "from tensorflow import keras\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +30,13 @@
     "data = np.delete(data,0,axis=1)\n",
     "labels = np.delete(labels,0,axis=1)\n",
     "labels = np.delete(labels,0,axis=0)\n",
-    "RANDOM_STATE=34\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(data, labels, test_size=.2, random_state=RANDOM_STATE)\n"
+    "RANDOM_STATE=42\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(data, labels, test_size=.25, random_state=RANDOM_STATE)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +45,8 @@
      "text": [
       "Accuracy:  100.0 %\n",
       "Confusion matrix:\n",
-      " [[166   0]\n",
-      " [  0 374]]\n"
+      " [[ 440    0]\n",
+      " [   0 1360]]\n"
      ]
     },
     {
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +83,8 @@
      "text": [
       "Accuracy:  100.0 %\n",
       "Confusion matrix:\n",
-      " [[166   0]\n",
-      " [  0 374]]\n"
+      " [[ 440    0]\n",
+      " [   0 1360]]\n"
      ]
     },
     {
